--- a/.gitconfig
+++ b/.gitconfig
@@ -37,5 +37,6 @@
     ign = ls-files -o -i --exclude-standard
 	dir = git rev-parse --show-toplevel
 	slog = log --pretty=format:\"%C(yellow)%h%Cred%d %Creset%s%Cblue [%cn]\" --decorate
+	clog = log --pretty=format:\"%C(yellow)%h%Cred%d %Creset%s%Cblue [%cn]\" --decorate --numstat
 [http]
 	sslVerify = false
