Change user email

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
     name = Daniel Noguchi
-    email = dnoguchi@padtec.com.br
+    email = danielnoguchi@gmail.com
 
 [color]
     ui = auto
