Update copy mode on tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,15 +24,21 @@ set -g mouse on
 #
 # To paste, press <prefix>,P. 
 bind P paste-buffer
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
-bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # Tmux has it’s own buffer for coppying. However, we can copy from tmux buffer
 # to system buffer (clipboard)
 #
 # For this to happen, we need xclip installed (use apt)
-bind -Tcopy-mode-vi y send -X copy-pipe "xclip -sel clip -i"
+#     bind-key -T copy-mode-vi v send-keys -X begin-selection
+#     bind-key -T copy-mode-vi y send-keys -X copy-selection
+#     bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+#     bind -T copy-mode-vi y send -X copy-pipe "xclip -sel clip -i"
+#     bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+#
+# Instead of the above config, which requires you to enter vi-copy-mode, we'll
+# enable mouse selection copy to clipboard
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key -T copy-mode MouseDragEnd1Pane send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 # Quiet mode
 set-option -g visual-bell off
