--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,16 +29,15 @@ bind P paste-buffer
 # to system buffer (clipboard)
 #
 # For this to happen, we need xclip installed (use apt)
-#     bind-key -T copy-mode-vi v send-keys -X begin-selection
-#     bind-key -T copy-mode-vi y send-keys -X copy-selection
-#     bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
-#     bind -T copy-mode-vi y send -X copy-pipe "xclip -sel clip -i"
-#     bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+bind-key -Tcopy-mode-vi Escape send -X cancel
+bind-key -Tcopy-mode-vi V send -X rectangle-toggle
 #
 # Instead of the above config, which requires you to enter vi-copy-mode, we'll
 # enable mouse selection copy to clipboard
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
-bind-key -T copy-mode MouseDragEnd1Pane send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+# bind-key -T copy-mode MouseDragEnd1Pane send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 # Quiet mode
 set-option -g visual-bell off
