--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 # Change prefix to M+a, since C-a interferes with readline temirnal bindings
 unbind C-b
 set -g prefix M-a   
+bind-key M-a send-prefix
 
 # Split panes using | and -
 bind | split-window -h
@@ -58,10 +59,6 @@ set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 # Bind colon : to be command prompt
 bind : command-prompt
 
-# Set pane colors
-set -g pane-border-fg black
-set -g pane-active-border-fg brightred
-
 # Moving between panes with vim movement keys
 bind h select-pane -L
 bind j select-pane -D
@@ -70,49 +67,33 @@ bind l select-pane -R
 
 # Configure status line
 set -g status-justify left
-set -g status-bg default
-set -g status-fg colour12
 set -g status-interval 2
 
 # Style
 
 ##  The modes
 setw -g clock-mode-colour colour135
-setw -g mode-attr bold
-setw -g mode-fg colour196
-setw -g mode-bg colour238
+set-option -g mode-style "fg=colour196, bg=colour238,bold"
 
 ## The panes
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
+set -g pane-border-style "bg=colour235,fg=colour238"
+set -g pane-active-border-style "bg=colour236,fg=colour51"
 
 ## The statusbar
 set -g status-position bottom
-set -g status-bg colour234
-set -g status-fg colour137
-set -g status-attr dim
+set -g status-style "bg=colour234,fg=colour12,dim"
 set -g status-left ''
 set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
-setw -g window-status-current-fg colour81
-setw -g window-status-current-bg colour238
-setw -g window-status-current-attr bold
+setw -g window-status-current-style "fg=colour81,bg=colour238,bold"
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
-setw -g window-status-attr none
+setw -g window-status-style "fg=colour138,bg=colour235"
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
+setw -g window-status-bell-style "bg=colour1,fg=colour255"
 
 ## The messages
-set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour166
+set -g message-style "fg=colour232,bg=colour166,bold "
